# opnsense-py

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: cli.rst  conf.py  index.rst  installation.rst  library.rst
docs/api/: modules.rst
opnsense_py/: __init__.py  client.py  exceptions.py
opnsense_py/cli/: __init__.py  context.py  main.py  output.py  utils.py
opnsense_py/cli/commands/: auth.py  captiveportal.py  cron.py  dhcrelay.py  diagnostics.py  dnsmasq.py  firewall.py  firmware.py  haproxy.py  hostdiscovery.py  ids.py  ipsec.py  kea.py  monit.py  ntpd.py  openvpn.py  radvd.py  routes.py  routing.py  syslog.py  system.py  trafficshaper.py  trust.py  unbound.py  wireguard.py
opnsense_py/models/: __init__.py  base.py  captiveportal.py  core.py  cron.py  dhcrelay.py  dnsmasq.py  firewall.py  ids.py  interfaces.py  ipsec.py  kea.py  monit.py  openvpn.py  radvd.py  routes.py  routing.py  syslog.py  trafficshaper.py  unbound.py  wireguard.py
opnsense_py/modules/: __init__.py  base.py
opnsense_py/modules/core/: __init__.py  auth.py  captiveportal.py  core.py  cron.py  dhcrelay.py  diagnostics.py  dnsmasq.py  firewall.py  firmware.py  hostdiscovery.py  ids.py  interfaces.py  ipsec.py  kea.py  monit.py  ntpd.py  openvpn.py  radvd.py  routes.py  routing.py  syslog.py  trafficshaper.py  trust.py  unbound.py  wireguard.py
opnsense_py/modules/plugins/: __init__.py  haproxy.py
tests/: conftest.py
tests/unit/: test_client.py  test_models.py
tests/unit/cli/: conftest.py  test_context.py  test_cron_cmds.py  test_output.py
(+4 files in other folders)
