[tool.poetry]
name = "opnsense-py"
version = "0.1.0"
description = "Python wrapper for the OPNsense REST API"
authors = ["Justin Refi <justinrefi@gmail.com>"]
readme = "README.md"
packages = [{ include = "opnsense_py" }]

[tool.poetry.dependencies]
python = ">=3.12"
httpx = ">=0.27.0"
pydantic = ">=2.0.0"
click = {version = ">=8.1.0", optional = true}
tabulate = {version = ">=0.9.0", optional = true}

[tool.poetry.extras]
cli = ["click", "tabulate"]

[tool.poetry.scripts]
opn = "opnsense_py.cli.main:cli"
opnsense = "opnsense_py.cli.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
respx = ">=0.21.0"
pytest-cov = ">=5.0.0"
mypy = ">=1.10.0"
ruff = ">=0.4.0"
click = ">=8.1.0"
tabulate = ">=0.9.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^9.1.0"
sphinx-markdown-builder = "^0.6.10"
sphinx-sitemap = "^2.9.0"
sphinx-tabs = "^3.5.0"
blockdiag = ">=2.0.0"
nwdiag = ">=2.0.0"
seqdiag = ">=2.0.0"
actdiag = ">=2.0.0"
sphinxcontrib-blockdiag = "^3.0.0"
sphinxcontrib-nwdiag = "^2.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinxcontrib-actdiag = "^3.0.0"
blockdiagcontrib-cisco = "^0.1.8"
pillow = "^12.1.1"
ply = "^3.11"
sphinx-rtd-theme = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = ["integration: requires live OPNsense instance"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
